--- a/index.html
+++ b/index.html
@@ -131,15 +131,15 @@
             <div class="row ">
                 <div class="col col-3">
                     <div class="skills-text">Javascript</div>
-                    <img src="images\javascript.png">
+                    <img src="images\Javascript.png">
                 </div>
                 <div class="col col-3">
                     <div class="skills-text">jQuery</div>
-                    <img src="images\jquery.png">
+                    <img src="images\jQuery.png">
                 </div>
                 <div class="col col-3">
                     <div class="skills-text">HTML</div>
-                    <img src="images\html.png">
+                    <img src="images\HTML.png">
                 </div>
                 <div class="col col-3">
                     <div class="skills-text">CSS</div>
@@ -153,15 +153,15 @@
                 </div>
                 <div class="col col-3">
                     <div class="skills-text">Github</div>
-                    <img src="images\github.png">
+                    <img src="images\Github.png">
                 </div>
                 <div class="col col-3">
                     <div class="skills-text">NPM</div>
-                    <img src="images\npm.png">
+                    <img src="images\NPM.png">
                 </div>
                 <div class="col col-3">
                     <div class="skills-text">Gulp</div>
-                    <img src="images\gulp.png">
+                    <img src="images\Gulp.png">
                 </div>
             </div>
         </div>
