--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         /* Set height of body and the document to 100% to enable "full page tabs" */
         body,
@@ -40,7 +41,7 @@
             color: white;
             display: none;
             padding: 100px 20px;
-            min-height:100%;
+            min-height: 100%;
         }
 
         #About {
@@ -65,6 +66,8 @@
             margin-right: auto;
             width: 50%;
             height: 50%;
+            padding: 5px;
+            background-color: white;
         }
 
         .skills-text {
@@ -72,6 +75,65 @@
             line-height: 110%;
             margin: 1.0933333333rem 0 .656rem 0;
             text-align: center;
+        }
+
+        .fa {
+            padding: 20px;
+            font-size: 30px;
+            width: 70px;
+            text-align: center;
+            text-decoration: none;
+            margin: 5px 2px;
+            border-radius: 50%;
+        }
+
+        .fa:hover {
+            opacity: 0.7;
+        }
+
+        .fa-linkedin {
+            background: #007bb5;
+            color: white;
+        }
+
+        .fa-skype {
+            background: #00aff0;
+            color: white;
+        }
+
+        .fa-google {
+            background: #dd4b39;
+            color: white;
+        }
+
+        .fa-phone {
+            background: #430297;
+            color: white;
+        }
+
+        .fa-github {
+            background: black;
+            color: white;
+        }
+
+        a,
+        a:hover {
+            color: white;
+            text-decoration: none;
+        }
+
+        #experience {
+            font-size: 40px;
+        }
+
+        #experience i {
+            font-size: 20px;
+        }
+
+        .profile-pic {
+            height: 200px;
+            width: 200px;
+            border-radius: 50%;
         }
     </style>
     <title>Nilav Patel</title>
@@ -85,9 +147,14 @@
     <button class="tablink" onclick="openPage('Contact', this, '#43a047')">Contact me</button>
 
     <div id="About" class="tabcontent">
-        <h3>About me</h3>
-        <p>Nilav Patel</p>
-        <p>Senior Software Engineer</p>
+        <div class="row">
+            <div class="col col-2"><img src="images/nilav.jpg" class="profile-pic"></div>
+            <div class="col col-10">
+                <h1>Nilav Pravinbhai Patel</h1>
+                <h3>I am currently working as a Senior Software Engineer.</h3>
+                <h4>Experience : </h4><span id="experience"></span>
+            </div>
+        </div>
     </div>
 
     <div id="Skills" class="tabcontent">
@@ -174,8 +241,12 @@
 
     <div id="Contact" class="tabcontent">
         <h3>Contact me</h3>
-        <div><a href="mailto:nilavpatel1992@gmail.com">nilavpatel1992@gmail.com</a></div>
-        <div><a href="phone:+91 9558433644">+91 9558433644</a></div>
+        <div><a href="mailto:nilavpatel1992@gmail.com" class="fa fa-google"></a><a
+                href="mailto:nilavpatel1992@gmail.com">nilavpatel1992@gmail.com</a></div>
+        <div><a href="tel:+91 9558433644" class="fa fa-phone"></a><a href="tel:+91 9558433644">+91 9558433644</a></div>
+        <div><a href="http://www.linkedin.com/in/nilav-patel-ba3601b5" class="fa fa-linkedin" target="_blank"></a></div>
+        <div><a href="#" class="fa fa-skype"></a><a href="#">live:nilavpatel2810</a></div>
+        <div><a href="https://github.com/NilavPatel" class="fa fa-github" target="_blank"></a></div>
     </div>
 
     <!-- Optional JavaScript -->
@@ -189,8 +260,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"
+        integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ=" crossorigin="anonymous"></script>
+    <script src='js\moment-precise-range.js'></script>
     <script>
+
         function openPage(pageName, elmnt, color) {
             // Hide all elements with class="tabcontent" by default */
             var i, tabcontent, tablinks;
@@ -212,8 +286,25 @@
             elmnt.style.backgroundColor = color;
         }
 
-        // Get the element with id="defaultOpen" and click on it
-        document.getElementById("defaultOpen").click();
+        $(document).ready(function () {
+            // Get the element with id="defaultOpen" and click on it
+            document.getElementById("defaultOpen").click();
+        });
+
+        setInterval(() => {
+            getExeperience();
+        }, 100);
+
+        function getExeperience() {
+            var starts = moment('2014-06-01 12:53:12');
+            var ends = moment();
+
+            var result = moment.preciseDiff(starts, ends, true);
+            var strResult = result.years + ' <i>Years</i> ' + result.months + ' <i>Months</i> ' + result.days + ' <i>Days</i> '
+                + result.hours + ' <i>Hours</i> ' + result.minutes + ' <i>Minutes</i> ' + result.seconds + ' <i>Seconds</i> ';
+
+            $("#experience").html(strResult);
+        }
     </script>
 </body>
 
