--- a/index.html
+++ b/index.html
@@ -155,6 +155,58 @@
                 <h4>Experience : </h4><span id="experience"></span>
             </div>
         </div>
+        <div class="row">
+            <div class="col col-6">
+                <table class="table table-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th>Examination</th>
+                            <th>Branch</th>
+                            <th>College (University)</th>
+                            <th>Passing Year</th>
+                            <th>CPI</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>B.E.</td>
+                            <td>Information Technology</td>
+                            <td>L. D. College of Engineering, Ahmedabad (GTU)</td>
+                            <td>2014</td>
+                            <td>7.27 (8.20 CGPA)</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col col-6">
+                <table class="table table-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th>Examination</th>
+                            <th>Board</th>
+                            <th>Passing Year</th>
+                            <th>% Marks</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>HSC</td>
+                            <td>GHSEB</td>
+                            <td>March 2010</td>
+                            <td>82.00% (A Group)</td>
+                        </tr>
+                        <tr>
+                            <td>SSC</td>
+                            <td>GSEB</td>
+                            <td>March 2008</td>
+                            <td>90.46%</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 
     <div id="Skills" class="tabcontent">
