--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             background-color: white;
         }
 
-        .SKILLS{
+        .SKILLS {
             text-align: center
         }
 
@@ -147,13 +147,31 @@
             color: white;
             opacity: 1;
         }
+
+        .top-anchore {
+            height: 50px;
+            width: 50px;
+            margin: 20px;
+            position: fixed;
+            right: 0px;
+            bottom: 0px;
+        }
+
+        .top-anchore a {
+            color: #117964;
+        }
+
+        .top-anchore a:hover i {
+            color: #117964;
+            text-decoration: none;
+        }
     </style>
 </head>
 
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default" id="top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -184,10 +202,13 @@
 
     <div class="container-fluid bg-2 text-center" id="WHAT">
         <h3>What Am I?</h3>
-        <p>My name is <b>Nilav Patel</b>. I have completed my Bachelor of Engineering in Information Technology from L. D.
+        <p>My name is <b>Nilav Patel</b>. I have completed my Bachelor of Engineering in Information Technology from L.
+            D.
             College of Engineering in 2014.</p>
-        <p>From last <b><i id="experience"></i></b>, I am working as a Senior Software Engineer. I love to write code, programs,
-            algorithms. I am a passionate frontned and hardcore backend developer. I love to work with new emerging front end technologies like Angular, Node,
+        <p>From last <b><i id="experience"></i></b>, I am working as a Senior Software Engineer. I love to write code,
+            programs,
+            algorithms. I am a passionate frontned and hardcore backend developer. I love to work with new emerging
+            front end technologies like Angular, Node,
             jQuery, Javascript. And also love to work with Microsoft technologies.</p>
     </div>
 
@@ -318,6 +339,10 @@
             </div>
             <div class="col col-sm-1"></div>
         </div>
+    </div>
+
+    <div class="top-anchore">
+        <a href="#top"><i class="fa fa-chevron-up"></i></a>
     </div>
 
     <footer class="container-fluid bg-4 text-center">
