--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 front end technologies like Angular, Node,
                 jQuery, Javascript. And also love to work with Microsoft technologies.</p>
             <div class="horizontal-rule"></div>
-            <p>In free time I love to watch moview, play video games and travelling.</p>
+            <p>In free time I love to watch movies, play video games and travelling.</p>
         </div>
     </div>
 
