--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <style>
+        html, body{
+            width: 100%;
+            overflow-x: hidden;
+        }
         body {
             font: 20px Montserrat, sans-serif;
             line-height: 1.8;
-            color: #f5f6f7;
-            width: 100%;
-            overflow-x: hidden;
+            color: #f5f6f7;            
         }
 
         p {
