--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <style>
-        html, body{
+        html,
+        body {
             width: 100%;
             overflow-x: hidden;
         }
+
         body {
             font: 20px Montserrat, sans-serif;
             line-height: 1.8;
-            color: #f5f6f7;            
+            color: #f5f6f7;
         }
 
         p {
@@ -136,6 +138,7 @@
             height: 100px;
             padding: 5px;
             background-color: white;
+            box-shadow: 10px 10px 5px grey;
         }
 
         .SKILLS {
@@ -174,6 +177,23 @@
             margin: 20px 48%;
             border-top: 1px solid white
         }
+
+        #TOOLS .col-sm-3 {
+            padding-bottom: 20px;
+        }
+
+        #TOOLS h5 {
+            font-weight: bold !important;
+        }
+
+        .where-text {
+            font-size: 14px;
+            font-weight: bold;
+        }
+
+        .blink-text {
+            animation: blink 1s linear infinite;
+        }
     </style>
 </head>
 
@@ -206,7 +226,7 @@
         <h3>Who Am I?</h3>
         <img src="images/nilav.jpg" class="img-responsive img-circle" style="display:inline" alt="Nilav Patel"
             width="350" height="350">
-        <h3>I'm a Software Engineer</h3>
+        <h3 id="typint-text"></h3>
     </div>
 
     <div class="container-fluid bg-2 text-center" id="WHAT">
@@ -217,7 +237,8 @@
                 D.
                 College of Engineering in 2014.</p>
             <div class="horizontal-rule"></div>
-            <p>From last <b><i id="experience"></i></b>, I am working as a Senior Software Engineer. I love to write
+            <p>I have <b><i id="experience"></i></b> of experience, and currently working as a Senior Software Engineer.
+                I love to write
                 code,
                 programs,
                 algorithms. I am a passionate frontned and hardcore backend developer. I love to work with new emerging
@@ -344,18 +365,18 @@
             <div class="col col-sm-1"></div>
             <div class="col col-sm-2">
                 <a href="mailto:nilavpatel1992@gmail.com" class="fa fa-envelope"></a>
-                <div>nilavpatel1992@gmail.com</div>
+                <div class="where-text">nilavpatel1992@gmail.com</div>
             </div>
             <div class="col col-sm-2">
                 <a href="tel:+91 9558433644" class="fa fa-phone"></a>
-                <div>+91 9558433644</div>
+                <div class="where-text">+91 9558433644</div>
             </div>
             <div class="col col-sm-2">
                 <a href="http://www.linkedin.com/in/nilav-patel-ba3601b5" class="fab fa-linkedin" target="_blank"></a>
             </div>
             <div class="col col-sm-2">
                 <a href="skype:live:nilavpatel2810?add" class="fab fa-skype"></a>
-                <div>live:nilavpatel2810</div>
+                <div class="where-text">live:nilavpatel2810</div>
             </div>
             <div class="col col-sm-2">
                 <a href="https://github.com/NilavPatel" class="fab fa-github" target="_blank"></a>
@@ -381,9 +402,23 @@
         integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ=" crossorigin="anonymous"></script>
     <script src='js\moment-precise-range.js'></script>
     <script>
+        var i = 0;
+        var txt = "I'm a Software Engineer.";
+
         $(document).ready(function () {
             getExeperience();
+            setTimeout(() => {
+                typeWriter();
+            }, 500);
         });
+
+        function typeWriter() {
+            if (i < txt.length) {
+                document.getElementById("typint-text").innerHTML += txt.charAt(i);
+                i++;
+                setTimeout(typeWriter, 100);
+            }
+        }
 
         function getExeperience() {
             var starts = moment('2014-06-01 12:53:12');
