--- a/index.html
+++ b/index.html
@@ -194,6 +194,15 @@
         .blink-text {
             animation: blink 1s linear infinite;
         }
+        #multiCollapseExample2 img{
+            height:200px;
+            width:200px;
+            padding:5px;
+            background-color:white;
+        }
+        .nav-tabs li:hover{
+            cursor: pointer;
+        }
     </style>
 </head>
 
@@ -249,79 +258,98 @@
         </div>
     </div>
 
-    <div class="container-fluid bg-5 text-center" id="TOOLS">
-        <h3>What Are My Development Tools?</h3><br>
+    <div class="container-fluid bg-5 text-center" id="TOOLS" style="padding-top: 10px;">
         <div class="row">
-            <div class="row ">
-                <div class="col col-sm-3">
-                    <h5>Asp.Net</h5>
-                    <img src="images\aspnet.png">
+            <ul class="nav nav-tabs">
+                <li class="active col col-sm-6"><a id="multiCollapseExample1-link">What Are My Development Tools?</a></li>
+                <li class="col col-sm-6"><a id="multiCollapseExample2-link">What Are My Development Methodology?</a></li>
+            </ul>
+        </div>
+        <div id="multiCollapseExample1">
+            <div class="row">
+                <div class="row ">
+                    <div class="col col-sm-3">
+                        <h5>Asp.Net</h5>
+                        <img src="images\aspnet.png">
+                    </div>
+                    <div class="col col-sm-3">
+                        <h5>MVC</h5>
+                        <img src="images\mvc.jpg">
+                    </div>
+                    <div class="col col-sm-3">
+                        <h5>Angular</h5>
+                        <img src="images\angular.png">
+                    </div>
+                    <div class="col col-sm-3">
+                        <h5>Typescript</h5>
+                        <img src="images\typescript.png">
+                    </div>
                 </div>
-                <div class="col col-sm-3">
-                    <h5>MVC</h5>
-                    <img src="images\mvc.jpg">
+                <div class="row ">
+                    <div class="col col-sm-3">
+                        <h5>SQL server</h5>
+                        <img src="images\sql.png">
+                    </div>
+                    <div class="col col-sm-3">
+                        <h5>Core</h5>
+                        <img src="images\core.png">
+                    </div>
+                    <div class="col col-sm-3">
+                        <h5>Web API</h5>
+                        <img src="images\webapi.jpg">
+                    </div>
+                    <div class="col col-sm-3">
+                        <h5>WCF</h5>
+                        <img src="images\wcf.jpg">
+                    </div>
                 </div>
-                <div class="col col-sm-3">
-                    <h5>Angular</h5>
-                    <img src="images\angular.png">
+                <div class="row ">
+                    <div class="col col-sm-3">
+                        <h5>Javascript</h5>
+                        <img src="images\Javascript.png">
+                    </div>
+                    <div class="col col-sm-3">
+                        <h5>jQuery</h5>
+                        <img src="images\jQuery.png">
+                    </div>
+                    <div class="col col-sm-3">
+                        <h5>HTML</h5>
+                        <img src="images\HTML.png">
+                    </div>
+                    <div class="col col-sm-3">
+                        <h5>CSS</h5>
+                        <img src="images\css.png">
+                    </div>
                 </div>
-                <div class="col col-sm-3">
-                    <h5>Typescript</h5>
-                    <img src="images\typescript.png">
+                <div class="row ">
+                    <div class="col col-sm-3">
+                        <h5>TFS</h5>
+                        <img src="images\tfs.png">
+                    </div>
+                    <div class="col col-sm-3">
+                        <h5>Github</h5>
+                        <img src="images\Github.png">
+                    </div>
+                    <div class="col col-sm-3">
+                        <h5>NPM</h5>
+                        <img src="images\NPM.png">
+                    </div>
+                    <div class="col col-sm-3">
+                        <h5>Gulp</h5>
+                        <img src="images\Gulp.png">
+                    </div>
                 </div>
             </div>
+        </div>
+        <div id="multiCollapseExample2" style="display:none">
             <div class="row ">
-                <div class="col col-sm-3">
-                    <h5>SQL server</h5>
-                    <img src="images\sql.png">
+                <div class="col col-sm-6">
+                    <h1>Agile</h1>
+                    <img src="images\agile.png">
                 </div>
-                <div class="col col-sm-3">
-                    <h5>Core</h5>
-                    <img src="images\core.png">
-                </div>
-                <div class="col col-sm-3">
-                    <h5>Web API</h5>
-                    <img src="images\webapi.jpg">
-                </div>
-                <div class="col col-sm-3">
-                    <h5>WCF</h5>
-                    <img src="images\wcf.jpg">
-                </div>
-            </div>
-            <div class="row ">
-                <div class="col col-sm-3">
-                    <h5>Javascript</h5>
-                    <img src="images\Javascript.png">
-                </div>
-                <div class="col col-sm-3">
-                    <h5>jQuery</h5>
-                    <img src="images\jQuery.png">
-                </div>
-                <div class="col col-sm-3">
-                    <h5>HTML</h5>
-                    <img src="images\HTML.png">
-                </div>
-                <div class="col col-sm-3">
-                    <h5>CSS</h5>
-                    <img src="images\css.png">
-                </div>
-            </div>
-            <div class="row ">
-                <div class="col col-sm-3">
-                    <h5>TFS</h5>
-                    <img src="images\tfs.png">
-                </div>
-                <div class="col col-sm-3">
-                    <h5>Github</h5>
-                    <img src="images\Github.png">
-                </div>
-                <div class="col col-sm-3">
-                    <h5>NPM</h5>
-                    <img src="images\NPM.png">
-                </div>
-                <div class="col col-sm-3">
-                    <h5>Gulp</h5>
-                    <img src="images\Gulp.png">
+                <div class="col col-sm-6">
+                    <h1>Waterfall</h1>
+                    <img src="images\Waterfall.png">
                 </div>
             </div>
         </div>
@@ -410,6 +438,20 @@
             setTimeout(() => {
                 typeWriter();
             }, 500);
+
+            $("#multiCollapseExample2-link").click(function () {
+                $("#multiCollapseExample2").show();
+                $("#multiCollapseExample1").hide();
+                $(".active").removeClass("active");
+                $(this).parent().addClass("active");
+            })
+
+            $("#multiCollapseExample1-link").click(function () {
+                $("#multiCollapseExample1").show();
+                $("#multiCollapseExample2").hide();
+                $(".active").removeClass("active");
+                $(this).parent().addClass("active");
+            })
         });
 
         function typeWriter() {
