--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
             box-shadow: 10px 10px 5px grey;
         }
 
+        #TOOLS .large-img {
+            width: 200px;
+            height: 200px;
+        }
+
         .SKILLS {
             text-align: center
         }
@@ -334,12 +339,12 @@
         <div class="container">
             <div class="row ">
                 <div class="col col-sm-6">
-                    <h5>Agile</h5>
-                    <img src="images\agile.png">
+                    <h3>Agile</h3>
+                    <img class="large-img" src="images\agile.png">
                 </div>
                 <div class="col col-sm-6">
-                    <h5>Waterfall</h5>
-                    <img src="images\Waterfall.png">
+                    <h3>Waterfall</h3>
+                    <img class="large-img" src="images\Waterfall.png">
                 </div>
             </div>
         </div>
