--- a/index.html
+++ b/index.html
@@ -2,209 +2,26 @@
 <html lang="en">
 
 <head>
-    <!-- Theme Made By www.w3schools.com - No Copyright -->
     <title>Nilav Patel</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <style>
-        html,
-        body {
-            width: 100%;
-            overflow-x: hidden;
-        }
-
-        body {
-            font: 20px Montserrat, sans-serif;
-            line-height: 1.8;
-            color: #f5f6f7;
-        }
-
-        p {
-            font-size: 16px;
-        }
-
-        .margin {
-            margin-bottom: 45px;
-        }
-
-        .bg-1 {
-            background-color: #1abc9c;
-            /* Green */
-            color: #ffffff;
-        }
-
-        .bg-2 {
-            background-color: #474e5d;
-            /* Dark Blue */
-            color: #ffffff;
-        }
-
-        .bg-3 {
-            background-color: #ffffff;
-            /* White */
-            color: #555555;
-        }
-
-        .bg-4 {
-            background-color: #2f2f2f;
-            /* Black Gray */
-            color: #fff;
-        }
-
-        .bg-5 {
-            background-color: #e2e2e2;
-            color: #474e5d;
-        }
-
-        .container-fluid {
-            padding-top: 40px;
-            padding-bottom: 40px;
-        }
-
-        .navbar {
-            padding-top: 15px;
-            padding-bottom: 15px;
-            border: 0;
-            border-radius: 0;
-            margin-bottom: 0;
-            font-size: 12px;
-            letter-spacing: 5px;
-        }
-
-        .navbar-nav li a:hover {
-            color: #1abc9c !important;
-        }
-
-        .fa,
-        .fab {
-            padding: 20px;
-            font-size: 30px;
-            text-align: center;
-            text-decoration: none;
-            margin: 5px 2px;
-            border-radius: 50%;
-        }
-
-        .fa:hover {
-            opacity: 0.7;
-        }
-
-        .fa-linkedin {
-            background: #007bb5;
-            color: white;
-        }
-
-        .fa-skype {
-            background: #00aff0;
-            color: white;
-        }
-
-        .fa-envelope {
-            background: #dd4b39;
-            color: white;
-        }
-
-        .fa-phone {
-            background: #430297;
-            color: white;
-        }
-
-        .fa-github {
-            background: black;
-            color: white;
-        }
-
-        .contact-me a:hover {
-            text-decoration: none;
-            color: white;
-        }
-
-        .img-responsive {
-            height: 300px;
-            width: 300px;
-        }
-
-        #TOOLS img {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            width: 100px;
-            height: 100px;
-            padding: 5px;
-            background-color: white;
-            box-shadow: 10px 10px 5px grey;
-        }
-
-        #TOOLS .large-img {
-            width: 200px;
-            height: 200px;
-        }
-
-        .SKILLS {
-            text-align: center
-        }
-
-        .skills-icon .fa {
-            font-size: 50px !important;
-        }
-
-        .fa:hover,
-        .fab:hover {
-            color: white;
-            opacity: 1;
-        }
-
-        .top-anchore {
-            height: 50px;
-            width: 50px;
-            margin: 20px;
-            position: fixed;
-            right: 0px;
-            bottom: 0px;
-        }
-
-        .top-anchore a {
-            color: #117964;
-        }
-
-        .top-anchore a:hover i {
-            color: #117964;
-            text-decoration: none;
-        }
-
-        .horizontal-rule {
-            margin: 20px 48%;
-            border-top: 1px solid white
-        }
-
-        #TOOLS .col-sm-3 {
-            padding-bottom: 20px;
-        }
-
-        #TOOLS h5 {
-            font-weight: bold !important;
-        }
-
-        .where-text {
-            font-size: 14px;
-            font-weight: bold;
-        }
-
-        .blink-text {
-            animation: blink 1s linear infinite;
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"
+        integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ=" crossorigin="anonymous"></script>
+    <script src='js\moment-precise-range.js'></script>
+    <script src='js\custom.js'></script>
 </head>
 
 <body>
-
-    <!-- Navbar -->
     <nav class="navbar navbar-default" id="top">
         <div class="container">
             <div class="navbar-header">
@@ -417,43 +234,6 @@
             <div>2019@ Nilav Patel. Made with <span style="color:red;">❤</span></div>
         </p>
     </footer>
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"
-        integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ=" crossorigin="anonymous"></script>
-    <script src='js\moment-precise-range.js'></script>
-    <script>
-        var i = 0;
-        var txt = "I'm a Software Engineer.";
-
-        $(document).ready(function () {
-            getExeperience();
-            setTimeout(() => {
-                typeWriter();
-            }, 500);            
-        });
-
-        function typeWriter() {
-            if (i < txt.length) {
-                document.getElementById("typint-text").innerHTML += txt.charAt(i);
-                i++;
-                setTimeout(typeWriter, 100);
-            }
-        }
-
-        function getExeperience() {
-            var starts = moment('2014-06-01 12:53:12');
-            var ends = moment();
-
-            var result = moment.preciseDiff(starts, ends, true);
-            var strResult = result.years + ' Years ' + result.months + ' Months ';
-
-            $("#experience").html(strResult);
-        }
-    </script>
-
 </body>
 
 </html>
