--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <title>Nilav Patel</title>
     <meta charset="utf-8">
+    <meta name="description" content="Nilav Patel Portfolio">
+    <meta name="keywords" content="Nilav, Nilav Patel, Software Engineer, Software Development, nilavpatel">
+    <meta name="author" content="Nilav Patel">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
