--- a/index.html
+++ b/index.html
@@ -81,73 +81,73 @@
                 <div class="row ">
                     <div class="col col-sm-3">
                         <h5>Asp.Net</h5>
-                        <img src="images\aspnet.png">
+                        <img src="images\aspnet.png" class="size-change">
                     </div>
                     <div class="col col-sm-3">
                         <h5>MVC</h5>
-                        <img src="images\mvc.jpg">
+                        <img src="images\mvc.jpg" class="size-change">
                     </div>
                     <div class="col col-sm-3">
                         <h5>Angular</h5>
-                        <img src="images\angular.png">
+                        <img src="images\angular.png" class="size-change">
                     </div>
                     <div class="col col-sm-3">
                         <h5>Typescript</h5>
-                        <img src="images\typescript.png">
+                        <img src="images\typescript.png" class="size-change">
                     </div>
                 </div>
                 <div class="row ">
                     <div class="col col-sm-3">
                         <h5>SQL server</h5>
-                        <img src="images\sql.png">
+                        <img src="images\sql.png" class="size-change">
                     </div>
                     <div class="col col-sm-3">
                         <h5>Core</h5>
-                        <img src="images\core.png">
+                        <img src="images\core.png" class="size-change">
                     </div>
                     <div class="col col-sm-3">
                         <h5>Web API</h5>
-                        <img src="images\webapi.jpg">
+                        <img src="images\webapi.jpg" class="size-change">
                     </div>
                     <div class="col col-sm-3">
                         <h5>WCF</h5>
-                        <img src="images\wcf.jpg">
+                        <img src="images\wcf.jpg" class="size-change">
                     </div>
                 </div>
                 <div class="row ">
                     <div class="col col-sm-3">
                         <h5>Javascript</h5>
-                        <img src="images\Javascript.png">
+                        <img src="images\Javascript.png" class="size-change">
                     </div>
                     <div class="col col-sm-3">
                         <h5>jQuery</h5>
-                        <img src="images\jQuery.png">
+                        <img src="images\jQuery.png" class="size-change">
                     </div>
                     <div class="col col-sm-3">
                         <h5>HTML</h5>
-                        <img src="images\HTML.png">
+                        <img src="images\HTML.png" class="size-change">
                     </div>
                     <div class="col col-sm-3">
                         <h5>CSS</h5>
-                        <img src="images\css.png">
+                        <img src="images\css.png" class="size-change">
                     </div>
                 </div>
                 <div class="row ">
                     <div class="col col-sm-3">
                         <h5>TFS</h5>
-                        <img src="images\tfs.png">
+                        <img src="images\tfs.png" class="size-change">
                     </div>
                     <div class="col col-sm-3">
                         <h5>Github</h5>
-                        <img src="images\Github.png">
+                        <img src="images\Github.png" class="size-change">
                     </div>
                     <div class="col col-sm-3">
                         <h5>NPM</h5>
-                        <img src="images\NPM.png">
+                        <img src="images\NPM.png" class="size-change">
                     </div>
                     <div class="col col-sm-3">
                         <h5>Gulp</h5>
-                        <img src="images\Gulp.png">
+                        <img src="images\Gulp.png" class="size-change">
                     </div>
                 </div>
             </div>
@@ -160,11 +160,11 @@
             <div class="row ">
                 <div class="col col-sm-6">
                     <h3>Agile</h3>
-                    <img class="large-img" src="images\agile.png">
+                    <img class="large-img size-change" src="images\agile.png">
                 </div>
                 <div class="col col-sm-6">
                     <h3>Waterfall</h3>
-                    <img class="large-img" src="images\Waterfall.png">
+                    <img class="large-img size-change" src="images\Waterfall.png">
                 </div>
             </div>
         </div>
