--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <li><a href="#TOOLS">TOOLS</a></li>
                     <li><a href="#SKILLS">SKILLS</a></li>
                     <li><a href="#WHERE">WHERE</a></li>
-                    <li><a href="doc/Nilav-Resume.docx" target="_blank">RESUME</a></li>
+                    <li><a href="doc/Nilav-Resume.docx" target="_blank"><b>RESUME</b></a></li>
                 </ul>
             </div>
         </div>
